# growing_array

./: Cargo.toml  test_template.txt
benches/: benchmark.rs
src/: lib.rs  main.rs
