[package]
name = "growing_array"
version = "0.1.0"
edition = "2018"
description = """"""
authors = [ "Dominik Böhler <dominik.boehler@gmx.net>" ]

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
